--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="gemini image editor"
+      content="skeumorph icon generator"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>gemini image editor</title>
+    <title>skeumorph icon generator</title>
   </head>
   <body>
     <div id="app"></div>
